tests/fixtures/valid/multi/module_import_alias/src/constants/main.gcl
// Module import with alias
import constants.lib as c;

node g: Acceleration = @c.g0;
