tests/fixtures/invalid/multi/module_import_graph_ref/src/params/main.gcl
// Module include: qualified graph refs with @
import params.lib;

node total_mass: Mass = @params.dry_mass + @params.fuel_mass;
